# ActiveTrace_GestionDesarrolloSoft_Canciani

./: .gitignore  AGENTS.md  CHANGES.md  README.md  docker-compose.yml  skills-lock.json
backend/: .env.example  Dockerfile  README.md  alembic.ini  bootstrap_admin.py  pyproject.toml  seed_datos.py  seed_usuarios.py
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_tenant.py  002_auth_user.py  003_rbac.py  004_audit_log.py  005_estructura_academica.py  (+17 more)
backend/app/: main.py
backend/tests/: conftest.py  helpers_encuentros.py  test_analisis_router.py  test_analisis_schemas.py  test_app_startup.py  test_aprobado_derivation.py  test_asignacion_model.py  test_asignacion_repository.py  test_asignacion_repository_equipos.py  test_asignacion_schemas.py  test_asignacion_service.py  test_asignaciones_router.py  test_atrasados_service.py  test_audit_codes.py  test_audit_codes_coloquios.py  test_audit_integration.py  test_audit_log_model.py  test_audit_log_trigger.py  test_audit_repository.py  test_audit_router.py  test_audit_schemas.py  test_audit_service.py  test_auditoria_log.py  test_auditoria_metrics.py  test_auditoria_panel_acciones.py  test_auditoria_panel_comunicaciones.py  test_auditoria_panel_interacciones.py  test_auditoria_panel_ultimas.py  test_auditoria_repository.py  test_auditoria_scope.py  test_auth_integration.py  test_auth_repository.py  test_auth_router_integration.py  test_auth_service.py  test_auth_service_roles.py  test_auth_token_models.py  test_auth_user_model.py  test_aviso_model.py  test_aviso_repository.py  test_aviso_schemas.py  (+126 more)
(+612 files in other folders)
